--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ joblib==1.2.0
 streamlit==1.27.2
 scikit-learn==1.2.0
 pandas==1.5.2
+
+joblib==1.2.0
+streamlit==1.27.2
+scikit-learn==0.23.1
+pandas==1.5.2
